--- a/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/values/strings.xml
+++ b/Login-Register-CRUD-With-Kotlin-and-PHP-MySQL/Kotlin/app/src/main/res/values/strings.xml
@@ -1,22 +1,19 @@
 <resources>
     <string name="app_name">Authentification</string>
     <string name="title1">Sign Up</string>
-    <string name="title2">Sign In</string>
+    <string name="title2">Log In</string>
     <string name="desc1">Please Login To Your Account</string>
     <string name="desc2">Please Create Your Account</string>
     <string name="hintusername">Enter Your User Name</string>
     <string name="hintemail">Enter Your Email</string>
     <string name="hintpassword">Enter Your Password</string>
     <string name="hintconfirm">Confirm Your Password</string>
-    <string name="chain1">Don\'t have an account ? \u0020</string>
+    <string name="chain1">If you are a client click this button</string>
     <string name="chaine2">ShowPassword</string>
     <string name="chaine3">ShowConfirmPassword</string>
     <string name="forgetpass">Forgot Password !</string>
     <string name="chine3">Already have an account ?\u0020</string>
-    <string name="logf">Sign In With Facebook ?</string>
-    <string name="logg">Sign In With Google ?</string>
-    <string name="regf">Sign Up With Facebook ?</string>
-    <string name="regg">Sign Up With Google ?</string>
+
     <string name="OR"> OR </string>
     <string name="welcom">Welcome In Home</string>
     <string name="logout">Log Out</string>
@@ -30,4 +27,5 @@
     <string name="username">UserName :</string>
     <string name="save">Save Changes</string>
     <string name="client">Client Space</string>
+    <string name="title3">Sign In</string>
 </resources>
